--- a/pawhub/templates/base/base.html
+++ b/pawhub/templates/base/base.html
@@ -33,13 +33,13 @@
                             <a class="nav-link" href="{% url 'pets:pet_list' %}">All Pets</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'marketplace:list' %}">Marketplace</a>
+                            <a class="nav-link" href="{% url 'marketplace:marketplace_item_list' %}">Marketplace</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'hospitals:list' %}">Hospitals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'core:lost_found' %}">Lost & Found</a>
+                            <a class="nav-link" href="{% url 'lost_found:list' %}">Lost & Found</a>
                         </li>
                     {% endif %}
                 </ul>
