--- a/pawhub/templates/users/profile.html
+++ b/pawhub/templates/users/profile.html
@@ -49,25 +49,25 @@
                         {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-6">
-                                {{ form.first_name|as_crispy_field }}
+                                {{ user_form.first_name|as_crispy_field }}
                             </div>
                             <div class="col-md-6">
-                                {{ form.last_name|as_crispy_field }}
+                                {{ user_form.last_name|as_crispy_field }}
                             </div>
                             <div class="col-12">
-                                {{ form.email|as_crispy_field }}
+                                {{ user_form.email|as_crispy_field }}
                             </div>
                             <div class="col-md-6">
-                                {{ form.phone_number|as_crispy_field }}
+                                {{ profile_form.phone_number|as_crispy_field }}
                             </div>
                             <div class="col-md-6">
-                                {{ form.profile_picture|as_crispy_field }}
+                                {{ profile_form.profile_picture|as_crispy_field }}
                             </div>
                             <div class="col-12">
-                                {{ form.address|as_crispy_field }}
+                                {{ profile_form.address|as_crispy_field }}
                             </div>
                             <div class="col-12">
-                                {{ form.bio|as_crispy_field }}
+                                {{ profile_form.bio|as_crispy_field }}
                             </div>
                         </div>
                         <div class="mt-4 d-flex justify-content-between">
