--- a/pawhub/core/templates/core/base.html
+++ b/pawhub/core/templates/core/base.html
@@ -81,6 +81,11 @@
                                 <i class="fas fa-shopping-cart"></i> Cart
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'core:order_list' %}">
+                                <i class="fas fa-shopping-bag"></i> Orders
+                            </a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
                                 {{ user.username }}
