--- a/pawhub/templates/base.html
+++ b/pawhub/templates/base.html
@@ -106,6 +106,11 @@
                                     <i class="fas fa-user me-2"></i>Profile
                                 </a>
                             </li>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'core:order_list' %}">
+                                    <i class="fas fa-shopping-bag me-2"></i>View Orders
+                                </a>
+                            </li>
                             <li><hr class="dropdown-divider"></li>
                             <li>
                                 <a class="dropdown-item" href="{% url 'users:logout' %}">
